--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
    <title>PLEA - Musical App</title>
 
    <link rel="stylesheet" href="styles/styles.css">
-
+   <link rel="icon" type="image/x-icon" href="images/favicon2.png">
 
 </head>
 
